Test GitHub Actions workflow

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 				<div class="user-img flex-1"><img src="https://i.ibb.co/KFmnWzL/professional-profile.png"></div>
 				<div class="user-profile flex-1">
 					<div class="pro-details">
-						<div class="sm-text">HELLO, MY NAME IS</div>
+						<div class="sm-text">HELLO, I AM</div>
 						<div class="name">Noah dela Cruz</div>
 						<div class="role">Software Engineer</div>
 
