Add AWS Diagram

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 					<!-- <li><a href="">Education</a></li> -->
 					<!-- <li><a href="">Contact</a></li> -->
                     <li><a href="Noah_delaCruz_Resume.pdf" target="_blank">Resume</a></li>
+                    <li><a href="diagram.png" target="_blank">Diagram</a></li>
 				</ul>
 			</div>
 			<div class="left-footer">
@@ -92,7 +93,6 @@
 						<!-- <li><a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a></li> -->
 					</ul>
 				</div>
-
 				</div>
 			</div>
 			</div>
