--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					<!-- <li><a href="">Education</a></li> -->
 					<!-- <li><a href="">Contact</a></li> -->
                     <li><a href="Noah_delaCruz_Resume.pdf" target="_blank">Resume</a></li>
-                    <li><a href="diagram.png" target="_blank">Diagram</a></li>
+                    <li><a href="aws-diagram.png" target="_blank">Diagram</a></li>
 				</ul>
 			</div>
 			<div class="left-footer">
@@ -78,7 +78,7 @@
 					<!-- <div class="text">You will begin to realise why this exercise is called the Dickens Pattern (with reference to the ghost showing Scrooge some different futures)</div> -->
 					<div class="pr-list">
 						<ul>
-							<!-- <li><i class="fa fa-calendar" aria-hidden="true"></i> 14th May, 1992</li> -->
+							<!-- <dli><i class="fa fa-calendar" aria-hidden="true"></i> 14th May, 1992</dli> -->
 							<li><i class="fa fa-phone" aria-hidden="true"></i> 408-802-5717</li>
 							<li><i class="fa fa-envelope" aria-hidden="true"></i> nasdelacruz@ucdavis.com</li>
 							<!-- <li><i class="fa fa-map-marker" aria-hidden="true"></i> Hyderabad, Telangana</li> -->
